--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!-- Local CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>CavasFinder</title>
+    <title>CavasCompass</title>
 </head>
 <body>
 
@@ -18,7 +18,7 @@
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
                     <img src="https://getbootstrap.com/docs/5.3/assets/brand/bootstrap-logo.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-                    CanvasFinder
+                    CanvasCompass
                 </a>
             </div>
             <!-- Hamburger menu -->
