--- a/index.html
+++ b/index.html
@@ -79,8 +79,9 @@
           type="search"
           placeholder="Search"
           aria-label="Search"
+          id="search-input"
         />
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="search-button">
           Search
         </button>
       </form>
