--- a/index.html
+++ b/index.html
@@ -105,6 +105,11 @@
       </form>
     </scetion>   
 
+    <!-- Map display -->
+    <div class="container">
+      <iframe src="#" frameborder="1"></iframe>
+    </div>
+
     <!-- Bootstrap JavaScript -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
