--- a/index.html
+++ b/index.html
@@ -110,6 +110,20 @@
       <iframe src="#" frameborder="1"></iframe>
     </div>
 
+    <!-- Display Artist Information -->
+    <div class="card mb-3">
+      <div class="row g-0">
+        <div class="col-md-4" id="artistImg">
+        </div>
+        <div class="col-md-8">
+          <div class="card-body" id="artistInfo">
+            <div class="d-grid gap-2" id="artistButtons">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- Bootstrap JavaScript -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
