--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
         <div class="col-md-4" id="artistImg">
         </div>
         <div class="col-md-8">
-          <div class="card-body" id="artistInfo">
-            <div class="d-grid gap-2" id="artistButtons">
-            </div>
+          <div class="card-body" id="artistName">
+          </div>
+          <div class="d-grid gap-2" id="artistButtons">
           </div>
         </div>
       </div>
