Fixed navbar to top of screen, added proper title

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     />
     <!-- Local CSS -->
     <link rel="stylesheet" href="assets/css/style.css" />
-    <title>CavasCompass</title>
+    <title>MusicMap</title>
   </head>
 
   <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary px-5 fixed-top">
       <div class="container-fluid">
         <!-- Navbar Logo -->
         <div class="container-fluid">
@@ -57,7 +57,7 @@
     </nav>
 
     <!-- Description Jumbotron -->
-    <div class="text-center p-5 bg-primary text-white rounded-bottom">
+    <div class="text-center p-5 bg-primary text-white rounded-bottom mt-5">
       <h1 class="mb-4">MusicMap</h1>
       <p class="col-sm-6 m-auto mb-4">
         MusicMap is a versatile web application allowing users to search for
