--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
     <!-- Display Artist Information -->
     <div class="card mb-3">
-      <div class="row g-0">
+      <div class="row g-0" id="results">
         <div class="col-md-4" id="artistImg">
         </div>
         <div class="col-md-8">
