--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <!--Map-->
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-    <script type="module" src="./assets/js/map.js"></script>
+    <!-- <script type="module" src="./assets/js/map.js"></script> -->
   </head>
 
   <body>
@@ -90,7 +90,7 @@
           </div>
 
           <div class="col-sm-1">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="search-button">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="search-button" onclick="displayArtistData(event);">
               Search
             </button>
           </div>
@@ -137,6 +137,7 @@
     <!-- JQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <!-- Local JavaScripts -->
+    <script type="module" src="assets/js/map.js"></script>
     <script src="assets/js/BandsAPI.js"></script>
     <!--Map API script-->
       <script>(g=>{var h,a,k,p="The Google Maps JavaScript API",c="google",l="importLibrary",q="__ib__",m=document,b=window;b=b[c]||(b[c]={});var d=b.maps||(b.maps={}),r=new Set,e=new URLSearchParams,u=()=>h||(h=new Promise(async(f,n)=>{await (a=m.createElement("script"));e.set("libraries",[...r]+"");for(k in g)e.set(k.replace(/[A-Z]/g,t=>"_"+t[0].toLowerCase()),g[k]);e.set("callback",c+".maps."+q);a.src=`https://maps.${c}apis.com/maps/api/js?`+e;d[q]=f;a.onerror=()=>h=n(Error(p+" could not load."));a.nonce=m.querySelector("script[nonce]")?.nonce||"";m.head.append(a)}));d[l]?console.warn(p+" only loads once. Ignoring:",g):d[l]=(f,...n)=>r.add(f)&&u().then(()=>d[l](f,...n))})
