--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           </div>
 
           <div class="col-sm-1">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="search-button" onclick="displayArtistData(event);">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="search-button" onclick="displayArtistData(event)">
               Search
             </button>
           </div>
