Added Google fonts and made a class for each font

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Kanit:wght@100;400&display=swap" rel="stylesheet">
-    
+    <link href="https://fonts.googleapis.com/css2?family=Arimo&family=Fredoka&family=Open+Sans:wght@700&display=swap" rel="stylesheet">
 
     <!-- Local CSS -->
     <link rel="stylesheet" href="assets/css/style.css" />
@@ -60,8 +59,8 @@
         <!-- Navbar Links -->
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link active accent-font" aria-current="page" href="#">Home</a>
+            <a class="nav-link accent-font" href="#">About</a>
           </div>
         </div>
       </div>
@@ -69,8 +68,8 @@
 
     <!-- Description Jumbotron -->
     <div class="text-center p-5 bg-primary text-white rounded-bottom mt-5 hero">
-      <h1 class="mb-4 display-1">MusicMap</h1>
-      <p class="col-sm-6 m-auto mb-4">
+      <h1 class="mb-4 display-1 logo-font">MusicMap</h1>
+      <p class="col-sm-6 m-auto mb-4 main-font">
         MusicMap is a versatile web application allowing users to search for
         musicians and visualize both past and upcoming shows on an interactive
         map. The platform provides detailed information about concert venues,
@@ -98,13 +97,13 @@
 
           <!-- Search Button -->
           <div class="col-sm-1">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="search-button">
+            <button class="btn btn-outline-success my-2 my-sm-0 accent-font" type="submit" id="search-button">
               Search
             </button>
           </div>
 
           <!-- Selection box -->
-          <div class="col form-check">
+          <div class="col form-check accent-font">
               <legend>Event Timings:</legend>
             <div class="">
               <label for="checkbox-1">Past</label>
@@ -129,7 +128,7 @@
         <div class="row g-0" id="results">
           <div class="col-md-4" id="artistImg">
           </div>
-          <div class="row">
+          <div class="row accent-font">
             <div class="card-body" id="artistName">
             </div>
             <div class="d-grid gap-2" id="artistButtons">
