Created Img folder, added logo designs

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
             <img
-              src="https://getbootstrap.com/docs/5.3/assets/brand/bootstrap-logo.svg"
+              src="assets/img/MusicMap_logo_clear.png"
               alt="Logo"
               width="30"
               height="24"
