Replaced png files with svg files for logo

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
             <img
-              src="assets/img/MusicMap_logo_clear.png"
+              src="assets/img/MusicMap_logo_clear.svg"
               alt="Logo"
               width="30"
               height="24"
