--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
     />
 
     <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Arimo&family=Fredoka&family=Open+Sans:wght@700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Arimo&family=Fredoka&family=Open+Sans:wght@700&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- Local CSS -->
     <link rel="stylesheet" href="assets/css/style.css" />
@@ -59,7 +62,9 @@
         <!-- Navbar Links -->
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active accent-font" aria-current="page" href="#">Home</a>
+            <a class="nav-link active accent-font" aria-current="page" href="#"
+              >Home</a
+            >
             <a class="nav-link accent-font" href="#">About</a>
           </div>
         </div>
@@ -97,26 +102,35 @@
 
           <!-- Search Button -->
           <div class="col-sm-1">
-            <button class="btn btn-outline-success my-2 my-sm-0 accent-font" type="submit" id="search-button">
+            <button
+              class="btn btn-outline-success my-2 my-sm-0 accent-font"
+              type="submit"
+              id="search-button"
+            >
               Search
             </button>
           </div>
 
           <!-- Selection box -->
           <div class="col form-check accent-font">
-              <legend>Event Timings:</legend>
+            <legend>Event Timings:</legend>
             <div class="">
               <label for="checkbox-1">Past</label>
-              <input type="checkbox" name="checkbox-1" id="checkbox-1">
+              <input type="checkbox" name="checkbox-1" id="checkbox-1" />
             </div>
             <div class="">
               <label for="checkbox-2">Upcoming</label>
-              <input type="checkbox" name="checkbox-2" id="checkbox-2" checked>
+              <input
+                type="checkbox"
+                name="checkbox-2"
+                id="checkbox-2"
+                checked
+              />
             </div>
           </div>
         </div>
       </form>
-    </section>   
+    </section>
 
     <!-- Main section (map and band display) -->
     <section class="main">
@@ -126,17 +140,177 @@
       <!-- Display Artist Information -->
       <div class="card mb-3">
         <div class="row g-0" id="results">
-          <div class="col-md-4" id="artistImg">
-          </div>
+          <div class="col-md-4" id="artistImg"></div>
           <div class="row accent-font">
-            <div class="card-body" id="artistName">
-            </div>
-            <div class="d-grid gap-2" id="artistButtons">
-            </div>
+            <div class="card-body" id="artistName"></div>
+            <div class="d-grid gap-2" id="artistButtons"></div>
           </div>
         </div>
       </div>
-    </section>  
+    </section>
+
+    <!-- FAQ -->
+    <div class="accordion" id="accordionExample">
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button
+            class="accordion-button"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#collapseOne"
+            aria-expanded="true"
+            aria-controls="collapseOne"
+          >
+            What is MusicMap?
+          </button>
+        </h2>
+        <div
+          id="collapseOne"
+          class="accordion-collapse collapse show"
+          data-bs-parent="#accordionExample"
+        >
+          <div class="accordion-body">
+            <strong>MusicMap</strong> is a web application designed to help
+            users explore upcoming and past concerts of their favorite
+            musicians. Users can search for artists, toggle between past and
+            upcoming events, and access the artist's social media links to
+            gather the most accurate information directly from the source.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button
+            class="accordion-button collapsed"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#collapseTwo"
+            aria-expanded="false"
+            aria-controls="collapseTwo"
+          >
+            How do I use MusicMap?
+          </button>
+        </h2>
+        <div
+          id="collapseTwo"
+          class="accordion-collapse collapse"
+          data-bs-parent="#accordionExample"
+        >
+          <div class="accordion-body">
+            Enter the name of the musician you're interested in, and
+            <strong>MusicMap</strong> will display an interactive map showcasing
+            their past and upcoming concerts. You can toggle between past and
+            upcoming events, and for additional context, access the artist's
+            social media links displayed on the platform. Click on each event to
+            access detailed information about venues, dates, and locations.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button
+            class="accordion-button collapsed"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#collapseThree"
+            aria-expanded="false"
+            aria-controls="collapseThree"
+          >
+            Can I search for a specific venue or location?
+          </button>
+        </h2>
+        <div
+          id="collapseThree"
+          class="accordion-collapse collapse"
+          data-bs-parent="#accordionExample"
+        >
+          <div class="accordion-body">
+            Currently, <strong>MusicMap</strong> focuses on searching for
+            musicians rather than specific venues or locations. The platform is
+            designed to provide a comprehensive overview of an artist's concert
+            history and future performances.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button
+          class="accordion-button collapsed"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#collapseFour"
+          aria-expanded="false"
+          aria-controls="collapseFour"
+          >
+            Is MusicMap free to use?
+          </button>
+        </h2>
+        <div
+        id="collapseFour"
+        class="accordion-collapse collapse"
+        data-bs-parent="#accordionExample"
+        >
+          <div class="accordion-body">
+            Yes, <strong>MusicMap</strong> is a free-to-use web application.
+            There are no subscription fees or hidden charges associated with
+            accessing the platform and exploring concert information.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button
+          class="accordion-button collapsed"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#collapseFive"
+          aria-expanded="false"
+          aria-controls="collapseFive"
+          >
+            How frequently is the concert information updated?
+          </button>
+        </h2>
+        <div
+        id="collapseFive"
+        class="accordion-collapse collapse"
+        data-bs-parent="#accordionExample"
+        >
+          <div class="accordion-body">
+            The concert data on <strong>MusicMap</strong> is regularly updated
+            to ensure accuracy and relevancy. However, we recommend checking
+            closer to the event date for the most current information, as tour
+            schedules can occasionally change.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button
+          class="accordion-button collapsed"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#collapseSix"
+          aria-expanded="false"
+          aria-controls="collapseSix"
+          >
+            Is there a feature to purchase tickets through MusicMap Connect?
+          </button>
+        </h2>
+        <div
+        id="collapseSix"
+        class="accordion-collapse collapse"
+        data-bs-parent="#accordionExample"
+        >
+          <div class="accordion-body">
+            Currently, <strong>MusicMap</strong> does not facilitate ticket
+            purchases. The platform serves as a tool for concert exploration,
+            providing information about artists and their shows. Users are
+            directed to official ticket vendors or artist websites for ticket
+            purchases.
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- Bootstrap JavaScript -->
     <script
@@ -150,11 +324,43 @@
     <script type="module" src="assets/js/map.js"></script>
     <script src="assets/js/BandsAPI.js"></script>
     <!--Map API script-->
-      <script>(g=>{var h,a,k,p="The Google Maps JavaScript API",c="google",l="importLibrary",q="__ib__",m=document,b=window;b=b[c]||(b[c]={});var d=b.maps||(b.maps={}),r=new Set,e=new URLSearchParams,u=()=>h||(h=new Promise(async(f,n)=>{await (a=m.createElement("script"));e.set("libraries",[...r]+"");for(k in g)e.set(k.replace(/[A-Z]/g,t=>"_"+t[0].toLowerCase()),g[k]);e.set("callback",c+".maps."+q);a.src=`https://maps.${c}apis.com/maps/api/js?`+e;d[q]=f;a.onerror=()=>h=n(Error(p+" could not load."));a.nonce=m.querySelector("script[nonce]")?.nonce||"";m.head.append(a)}));d[l]?console.warn(p+" only loads once. Ignoring:",g):d[l]=(f,...n)=>r.add(f)&&u().then(()=>d[l](f,...n))})
-        ({key: "AIzaSyC1_Oq6EswbW4t_Yp_dBD0Hax7Nz-m-Lzs", v: "weekly"});</script>
-      <script src="https://unpkg.com/@googlemaps/markerclusterer/dist/index.min.js"></script>
-</body>
-
-
-
+    <script>
+      ((g) => {
+        var h,
+          a,
+          k,
+          p = "The Google Maps JavaScript API",
+          c = "google",
+          l = "importLibrary",
+          q = "__ib__",
+          m = document,
+          b = window;
+        b = b[c] || (b[c] = {});
+        var d = b.maps || (b.maps = {}),
+          r = new Set(),
+          e = new URLSearchParams(),
+          u = () =>
+            h ||
+            (h = new Promise(async (f, n) => {
+              await (a = m.createElement("script"));
+              e.set("libraries", [...r] + "");
+              for (k in g)
+                e.set(
+                  k.replace(/[A-Z]/g, (t) => "_" + t[0].toLowerCase()),
+                  g[k]
+                );
+              e.set("callback", c + ".maps." + q);
+              a.src = `https://maps.${c}apis.com/maps/api/js?` + e;
+              d[q] = f;
+              a.onerror = () => (h = n(Error(p + " could not load.")));
+              a.nonce = m.querySelector("script[nonce]")?.nonce || "";
+              m.head.append(a);
+            }));
+        d[l]
+          ? console.warn(p + " only loads once. Ignoring:", g)
+          : (d[l] = (f, ...n) => r.add(f) && u().then(() => d[l](f, ...n)));
+      })({ key: "AIzaSyC1_Oq6EswbW4t_Yp_dBD0Hax7Nz-m-Lzs", v: "weekly" });
+    </script>
+    <script src="https://unpkg.com/@googlemaps/markerclusterer/dist/index.min.js"></script>
+  </body>
 </html>
