--- a/index.html
+++ b/index.html
@@ -115,16 +115,17 @@
           <div class="col form-check accent-font">
             <legend>Event Timings:</legend>
             <div class="">
-              <label for="checkbox-1">Past</label>
-              <input type="checkbox" name="checkbox-1" id="checkbox-1" />
+              <label for="checkbox-1" class="px-2">Past</label>
+              <input type="checkbox" name="checkbox-1" id="checkbox-1" class="form-check-input nopadding"/>
             </div>
             <div class="">
-              <label for="checkbox-2">Upcoming</label>
+              <label for="checkbox-2" class="px-2">Upcoming</label>
               <input
                 type="checkbox"
                 name="checkbox-2"
                 id="checkbox-2"
                 checked
+                class="form-check-input nopadding"
               />
             </div>
           </div>
