Fixed code spacing in index.html

--- a/index.html
+++ b/index.html
@@ -151,163 +151,99 @@
     </section>
 
     <!-- FAQ -->
-    <div class="accordion" id="accordionExample">
-      <div class="accordion-item">
-        <h2 class="accordion-header">
-          <button
-            class="accordion-button"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#collapseOne"
-            aria-expanded="true"
-            aria-controls="collapseOne"
-          >
-            What is MusicMap?
-          </button>
-        </h2>
-        <div
-          id="collapseOne"
-          class="accordion-collapse collapse show"
-          data-bs-parent="#accordionExample"
-        >
-          <div class="accordion-body">
-            <strong>MusicMap</strong> is a web application designed to help
-            users explore upcoming and past concerts of their favorite
-            musicians. Users can search for artists, toggle between past and
-            upcoming events, and access the artist's social media links to
-            gather the most accurate information directly from the source.
+    <div class="container">
+      <div class="accordion" id="accordionExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne" >
+              What is MusicMap?
+            </button>
+          </h2>
+          <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <strong>MusicMap</strong> is a web application designed to help
+              users explore upcoming and past concerts of their favorite
+              musicians. Users can search for artists, toggle between past and
+              upcoming events, and access the artist's social media links to
+              gather the most accurate information directly from the source.
+            </div>
           </div>
         </div>
-      </div>
-      <div class="accordion-item">
-        <h2 class="accordion-header">
-          <button
-            class="accordion-button collapsed"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#collapseTwo"
-            aria-expanded="false"
-            aria-controls="collapseTwo"
-          >
-            How do I use MusicMap?
-          </button>
-        </h2>
-        <div
-          id="collapseTwo"
-          class="accordion-collapse collapse"
-          data-bs-parent="#accordionExample"
-        >
-          <div class="accordion-body">
-            Enter the name of the musician you're interested in, and
-            <strong>MusicMap</strong> will display an interactive map showcasing
-            their past and upcoming concerts. You can toggle between past and
-            upcoming events, and for additional context, access the artist's
-            social media links displayed on the platform. Click on each event to
-            access detailed information about venues, dates, and locations.
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+              How do I use MusicMap?
+            </button>
+          </h2>
+          <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              Enter the name of the musician you're interested in, and
+              <strong>MusicMap</strong> will display an interactive map showcasing
+              their past and upcoming concerts. You can toggle between past and
+              upcoming events, and for additional context, access the artist's
+              social media links displayed on the platform. Click on each event to
+              access detailed information about venues, dates, and locations.
+            </div>
           </div>
         </div>
-      </div>
-      <div class="accordion-item">
-        <h2 class="accordion-header">
-          <button
-            class="accordion-button collapsed"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#collapseThree"
-            aria-expanded="false"
-            aria-controls="collapseThree"
-          >
-            Can I search for a specific venue or location?
-          </button>
-        </h2>
-        <div
-          id="collapseThree"
-          class="accordion-collapse collapse"
-          data-bs-parent="#accordionExample"
-        >
-          <div class="accordion-body">
-            Currently, <strong>MusicMap</strong> focuses on searching for
-            musicians rather than specific venues or locations. The platform is
-            designed to provide a comprehensive overview of an artist's concert
-            history and future performances.
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree" >
+              Can I search for a specific venue or location?
+            </button>
+          </h2>
+          <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample" >
+            <div class="accordion-body">
+              Currently, <strong>MusicMap</strong> focuses on searching for
+              musicians rather than specific venues or locations. The platform is
+              designed to provide a comprehensive overview of an artist's concert
+              history and future performances.
+            </div>
           </div>
         </div>
-      </div>
-      <div class="accordion-item">
-        <h2 class="accordion-header">
-          <button
-          class="accordion-button collapsed"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#collapseFour"
-          aria-expanded="false"
-          aria-controls="collapseFour"
-          >
-            Is MusicMap free to use?
-          </button>
-        </h2>
-        <div
-        id="collapseFour"
-        class="accordion-collapse collapse"
-        data-bs-parent="#accordionExample"
-        >
-          <div class="accordion-body">
-            Yes, <strong>MusicMap</strong> is a free-to-use web application.
-            There are no subscription fees or hidden charges associated with
-            accessing the platform and exploring concert information.
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour" >
+              Is MusicMap free to use?
+            </button>
+          </h2>
+          <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample" >
+            <div class="accordion-body">
+              Yes, <strong>MusicMap</strong> is a free-to-use web application.
+              There are no subscription fees or hidden charges associated with
+              accessing the platform and exploring concert information.
+            </div>
           </div>
         </div>
-      </div>
-      <div class="accordion-item">
-        <h2 class="accordion-header">
-          <button
-          class="accordion-button collapsed"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#collapseFive"
-          aria-expanded="false"
-          aria-controls="collapseFive"
-          >
-            How frequently is the concert information updated?
-          </button>
-        </h2>
-        <div
-        id="collapseFive"
-        class="accordion-collapse collapse"
-        data-bs-parent="#accordionExample"
-        >
-          <div class="accordion-body">
-            The concert data on <strong>MusicMap</strong> is regularly updated
-            to ensure accuracy and relevancy. However, we recommend checking
-            closer to the event date for the most current information, as tour
-            schedules can occasionally change.
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive" >
+              How frequently is the concert information updated?
+            </button>
+          </h2>
+          <div id="collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionExample" >
+            <div class="accordion-body">
+              The concert data on <strong>MusicMap</strong> is regularly updated
+              to ensure accuracy and relevancy. However, we recommend checking
+              closer to the event date for the most current information, as tour
+              schedules can occasionally change.
+            </div>
           </div>
         </div>
-      </div>
-      <div class="accordion-item">
-        <h2 class="accordion-header">
-          <button
-          class="accordion-button collapsed"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#collapseSix"
-          aria-expanded="false"
-          aria-controls="collapseSix"
-          >
-            Is there a feature to purchase tickets through MusicMap Connect?
-          </button>
-        </h2>
-        <div
-        id="collapseSix"
-        class="accordion-collapse collapse"
-        data-bs-parent="#accordionExample"
-        >
-          <div class="accordion-body">
-            Currently, <strong>MusicMap</strong> does not facilitate ticket
-            purchases. The platform serves as a tool for concert exploration,
-            providing information about artists and their shows. Users are
-            directed to official ticket vendors or artist websites for ticket
-            purchases.
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix" >
+              Is there a feature to purchase tickets through MusicMap Connect?
+            </button>
+          </h2>
+          <div id="collapseSix" class="accordion-collapse collapse" data-bs-parent="#accordionExample" >
+            <div class="accordion-body">
+              Currently, <strong>MusicMap</strong> does not facilitate ticket
+              purchases. The platform serves as a tool for concert exploration,
+              providing information about artists and their shows. Users are
+              directed to official ticket vendors or artist websites for ticket
+              purchases.
+            </div>
           </div>
         </div>
       </div>
