Added a clear history button

--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
             <div class="card-body" id="artistName"></div>
             <div class="d-grid gap-2" id="artistButtons"></div>
           </div>
+          <button class="btn">Clear History</button>
         </div>
       </div>
     </section>
