Added logo to hero (needs work)

--- a/index.html
+++ b/index.html
@@ -73,8 +73,9 @@
 
     <!-- Description Jumbotron -->
     <div class="text-center p-5 bg-primary text-white rounded-bottom mt-5 hero">
-      <h1 class="mb-4 display-1 logo-font">MusicMap</h1>
-      <p class="col-sm-6 m-auto mb-4 main-font">
+      <img id="hero-logo" src="./assets/img/MusicMap_logo_clear.png" alt="MusicMap Logo">
+      <h1 class="mb-4 display-1 logo-font hero-title">MusicMap</h1>
+      <p class="col-sm-6 m-auto mb-4 main-font hero-text">
         MusicMap is a versatile web application allowing users to search for
         musicians and visualize both past and upcoming shows on an interactive
         map. The platform provides detailed information about concert venues,
