Local Storage Set, need list creation

--- a/index.html
+++ b/index.html
@@ -111,6 +111,17 @@
             </button>
           </div>
 
+          <!-- History Dropdown -->
+          <div class="dropdown">
+            <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              History
+            </a>          
+            <ul class="dropdown-menu" id="dropdownList">
+            </ul>
+          </div>
+
+          
+
           <!-- Selection box -->
           <div class="col form-check accent-font">
             <legend>Event Timings:</legend>
@@ -146,7 +157,7 @@
             <div class="card-body" id="artistName"></div>
             <div class="d-grid gap-2" id="artistButtons"></div>
           </div>
-          <button class="btn">Clear History</button>
+          <button class="btn" id="historyClear">Clear History</button>
         </div>
       </div>
     </section>
